<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_2"
        app:layout_constraintEnd_toStartOf="@+id/value_one"
        app:layout_constraintTop_toBottomOf="@+id/value_one" />

    <EditText
        android:id="@+id/value_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/value_1_hint"
        app:layout_constraintStart_toEndOf="@+id/label_one"
        app:layout_constraintTop_toTopOf="@+id/label_one" />

    <EditText
        android:id="@+id/value_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/value_2_hint"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="@+id/value_one"
        app:layout_constraintTop_toBottomOf="@+id/value_one" />


    <TextView
        android:id="@+id/operator_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_two" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/operator_label"
        app:layout_constraintTop_toTopOf="@+id/operator_label">

        <RadioButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

        <RadioButton
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtract" />

        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply" />

        <RadioButton
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:onClick="calulate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        app:layout_constraintStart_toEndOf="@+id/calculate"
        app:layout_constraintTop_toTopOf="@+id/calculate" />

</android.support.constraint.ConstraintLayout>